--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@
 }
 
 body {
-  background: -webkit-gradient(linear, left top, right bottom, from(#59C3C3), to(#52489C));
-  background: linear-gradient(to bottom right, #59C3C3, #52489C);
+  background: -webkit-gradient(linear, left top, right bottom, from(#59c3c3), to(#52489c));
+  background: linear-gradient(to bottom right, #59c3c3, #52489c);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -18,6 +18,7 @@ body {
       -ms-flex-align: center;
           align-items: center;
   min-height: 100vh;
+  padding: 1em;
 }
 
 .form-container {
@@ -43,7 +44,13 @@ body {
 }
 
 form {
-  width: 350px;
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  form {
+    width: 350px;
+  }
 }
 
 form input {
@@ -57,7 +64,7 @@ form input {
 }
 
 form input:focus {
-  outline: 2px solid #59C3C3;
+  outline: 2px solid #59c3c3;
   border: 1px solid transparent;
 }
 
@@ -65,9 +72,9 @@ form button {
   padding: 1em;
   color: #fff;
   border-radius: 6px;
-  border: 1px solid #52489C;
-  background: -webkit-gradient(linear, left top, right top, from(#59C3C3), to(#52489C));
-  background: linear-gradient(to right, #59C3C3, #52489C);
+  border: 1px solid #52489c;
+  background: -webkit-gradient(linear, left top, right top, from(#59c3c3), to(#52489c));
+  background: linear-gradient(to right, #59c3c3, #52489c);
   outline: none;
   cursor: not-allowed;
   width: 100%;
@@ -78,8 +85,8 @@ form button {
 }
 
 form button:hover {
-  border: 1px solid #52489C;
-  color: #52489C;
+  border: 1px solid #52489c;
+  color: #52489c;
   background: #fff;
 }
 
